<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/SmallGreen">


        <EditText
            android:id="@+id/lowText"
            style="@style/Widget.AppCompat.EditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="99dp"
            android:layout_marginLeft="99dp"
            android:layout_marginTop="46dp"
            android:layout_marginEnd="99dp"
            android:layout_marginRight="99dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/inputTip"
            android:inputType="number"
            android:textStyle="bold|italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="93dp"
            android:layout_marginLeft="93dp"
            android:layout_marginTop="127dp"
            android:layout_marginEnd="94dp"
            android:layout_marginRight="94dp"
            android:text="@string/Tipcalculator"
            android:textSize="36sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="126dp"
            android:layout_marginLeft="126dp"
            android:layout_marginTop="326dp"
            android:layout_marginEnd="241dp"
            android:layout_marginRight="241dp"
            android:layout_marginBottom="431dp"
            android:text="@string/onefive"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="126dp"
            android:layout_marginLeft="126dp"
            android:layout_marginTop="366dp"
            android:layout_marginEnd="241dp"
            android:layout_marginRight="241dp"
            android:layout_marginBottom="391dp"
            android:text="@string/oneeight"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/twozero"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="126dp"
            android:layout_marginLeft="126dp"
            android:layout_marginTop="405dp"
            android:layout_marginEnd="241dp"
            android:layout_marginRight="241dp"
            android:layout_marginBottom="352dp"
            android:text="@string/twozero"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <CheckBox
            android:id="@+id/checkBox15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="201dp"
            android:layout_marginLeft="201dp"
            android:layout_marginTop="326dp"
            android:layout_marginEnd="139dp"
            android:layout_marginRight="139dp"
            android:layout_marginBottom="431dp"
            android:text="@string/Select"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <CheckBox
            android:id="@+id/checkBox18"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="201dp"
            android:layout_marginLeft="201dp"
            android:layout_marginTop="366dp"
            android:layout_marginEnd="139dp"
            android:layout_marginRight="139dp"
            android:layout_marginBottom="391dp"
            android:text="@string/Select"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <CheckBox
            android:id="@+id/checkBox20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="201dp"
            android:layout_marginLeft="201dp"
            android:layout_marginTop="405dp"
            android:layout_marginEnd="139dp"
            android:layout_marginRight="139dp"
            android:layout_marginBottom="352dp"
            android:text="@string/Select"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/buttonGetNumber"
            android:layout_width="396dp"
            android:layout_height="43dp"
            android:layout_marginStart="7dp"
            android:layout_marginLeft="7dp"
            android:layout_marginTop="100dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="103dp"
            android:background="#EDE91E63"
            android:text="@string/get_tip"
            android:textColor="#FFFFFF"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView7" />


        <TextView
            android:id="@+id/TipResult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="201dp"
            android:layout_marginLeft="201dp"
            android:layout_marginTop="516dp"
            android:layout_marginEnd="210dp"
            android:layout_marginRight="210dp"
            android:layout_marginBottom="246dp"
            android:text="@string/empty"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/TotalResult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="202dp"
            android:layout_marginLeft="202dp"
            android:layout_marginTop="565dp"
            android:layout_marginEnd="210dp"
            android:layout_marginRight="210dp"
            android:layout_marginBottom="197dp"
            android:text="@string/empty"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="118dp"
            android:layout_marginLeft="118dp"
            android:layout_marginTop="511dp"
            android:layout_marginEnd="254dp"
            android:layout_marginRight="254dp"
            android:layout_marginBottom="246dp"
            android:text="Tip:"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="110dp"
            android:layout_marginLeft="110dp"
            android:layout_marginTop="560dp"
            android:layout_marginEnd="241dp"
            android:layout_marginRight="241dp"
            android:layout_marginBottom="197dp"
            android:text="@string/total"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
</layout>